# MultiTrans

./: .gitignore  LICENSE  README.md
building/: tech_stack.md
building/agent_docs/: server_agent_doc.md
clipboard-transfer-station/: README.md
clipboard-transfer-station/android-client/: settings.gradle.kts
clipboard-transfer-station/android-client/app/: build.gradle.kts
clipboard-transfer-station/android-client/app/src/main/: AndroidManifest.xml
clipboard-transfer-station/android-client/app/src/main/java/com/transfer/: MainActivity.kt
clipboard-transfer-station/backend/: go.mod
clipboard-transfer-station/backend/cmd/server/: main.go
clipboard-transfer-station/backend/internal/api/: handlers.go
clipboard-transfer-station/backend/internal/service/: clipboard_svc.go
clipboard-transfer-station/backend/internal/ws/: hub.go
clipboard-transfer-station/backend/src/: main.go
clipboard-transfer-station/backend/src/handlers/: index.go
clipboard-transfer-station/docs/: agent_commu.md
clipboard-transfer-station/windows-client/: package.json
clipboard-transfer-station/windows-client/src/: App.tsx
clipboard-transfer-station/windows-client/src-tauri/: Cargo.toml  tauri.conf.json
clipboard-transfer-station/windows-client/src-tauri/src/: main.rs
server/: package-lock.json  package.json
server/src/: app.controller.ts  app.module.ts  main.ts
server/src/events/: events.gateway.ts
server/src/file/: file.controller.ts
