[package]
name = "clipboard-transfer-station"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.0", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build]
rustflags = ["--cfg", "tauri"]

[package.metadata.tauri]
name = "Clipboard Transfer Station"
description = "A lightweight server-based file/clipboard transfer station."
version = "0.1.0"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
icon = "icons/icon.png"
tauri = { 
    bundle = { 
        identifier = "com.example.clipboardtransferstation", 
        icon = ["icons/icon.png"] 
    } 
}